# anthill

./: .pre-commit-config.yaml  Cargo.toml  GAME_GUIDE.md  README.md  rustfmt.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: discord-notify.yml
assets/worlds/: level_01.ron  level_02.ron  proc_gen.ron  rng_world.ron  test_world.ron
extra/: GAME_GUIDE.md  declaration_of_academic_integrity.md  playtest_report.md  technical_document.md
scripts/: latest_log
src/: ai.rs  core.rs  data.rs  main.rs  proc_gen.rs  render.rs  util.rs  world.rs
src/ai/: npc_ai.rs  pathfinding.rs
src/core/: armor.rs  buff_effects.rs  combat.rs  crafting.rs  cursor.rs  entity_logic.rs  game.rs  game_items.rs  inventory.rs  npc_ai.rs  player.rs  player_actions.rs  text_log.rs
src/data/: ascii_art.rs  item_defs.rs  levels.rs  npc_defs.rs
src/proc_gen/: bsp.rs  bsp_nodes.rs  corridors.rs  mst.rs  population.rs  proc_gen_level.rs  proc_gen_map.rs  proc_gen_room.rs  proc_gen_world.rs
src/render/: info_display.rs  menu_display.rs  modal_display.rs  ui.rs  world_display.rs
src/util/: command_handler.rs  errors_results.rs  input_handler.rs  rng.rs  text_log.rs
src/world/: coordinate_system.rs  level.rs  level_data.rs  level_loader.rs  tiles.rs  vision.rs  world_data.rs  world_loader.rs  worldspace.rs
