[package]
name = "anthill"
version = "0.1.0"
edition = "2024"

[dependencies]
crossterm = "0.29.0"
rand = "0.9.2"
ratatui = "0.29.0"
strum = "0.27.2"
strum_macros = "0.27.2"
serde = { version = "1.0", features = ["derive"] }
ron = "0.8"
num-rational = "0.4.2"
bitflags = "2.10.0"
dirs = "6.0.0"
chrono = "0.4.43"
